--- a/polish-version-calisia-web/about-pl.html
+++ b/polish-version-calisia-web/about-pl.html
@@ -31,28 +31,24 @@
             <div class="container">
                 <div class="navbar navbar-default" role="navigation">
                     <div class="navbar-collapse">
-                        <a href="index.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
+                        <a href="indexpl.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
-                            <li class="active"><a data-scroll href="about.html" class="int-collapse-menu">About</a>
+                            <li class="active"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
+                            <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
                             </li>
-                            <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
-                            <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
+                            <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
+                            <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
                             </li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
-
                         </ul>
                         <div class="languages">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
-                                    src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag"
-                                    src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
-                                    src="slider-images/icons8-china-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -60,26 +56,24 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="li-hamburger"><a data-scroll href="index.html" class="int-collapse-menu">Home</a>
+                            <li class="li-hamburger"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="about.html"
-                                    class="int-collapse-menu">About</a>
+                            <li class="li-hamburger"><a data-scroll href="about-pl.html"
+                                    class="int-collapse-menu">O Kaliszu</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="team.html" class="int-collapse-menu">Team</a>
+                            <li class="li-hamburger"><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="contact.html"
-                                    class="int-collapse-menu">Contact</a></li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
+                            <li class="li-hamburger"><a data-scroll href="contact-pl.html"
+                                    class="int-collapse-menu">Kontakt</a></li>
+                            <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                            </li>
                         </ul>
                         <div class="languages-2">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
-                                    src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag"
-                                    src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
-                                    src="slider-images/icons8-china-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
